# pccs-reader-rs

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  parser.rs
src/pccs/: enclave_id.rs  fmspc_tcb.rs  mod.rs
