[package]
name = "automata-pccs-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"
hex = "0.4"
serde_json = "1.0"
alloy = { version = "0.1", features = ["full"] }
anyhow = "1.0.82"
x509-parser  = "0.15.1"
tokio = { version = "1.35", features = ["full"] }